  is not needed there

* fixed internal issue #1983: the Web UI was showing a deletion confirmation
  multiple times.

* removed bundled Valgrind headers, removed JavaScript variable `valgrind`
  from the `internal` module

* upgraded JEMalloc version to 5.1.0

* use `-std=c++14` for ArangoDB compilation


v3.4.0-rc.3 (XXXX-XX-XX)
------------------------

* include forward-ported diagnostic options for debugging LDAP connections

* fix internal issue #3065: fix variable replacements by the AQL query
  optimizer in arangosearch view search conditions

  The consequence of the missing replacements was that some queries using view
  search conditions could have failed with error messages such as

  "missing variable #3 (a) for node #7 (EnumerateViewNode) while planning registers"

* support installation of ArangoDB on Windows into directories with multibyte
  character filenames on Windows platforms that used a non-UTF8-codepage

  This was supported on other platforms before, but never worked for ArangoDB's
  Windows version

* display shard synchronization progress for collections outside of the
  `_system` database

* change memory protection settings for memory given back to by the bundled
  JEMalloc memory allocator. This avoids splitting of existing memory mappings
  due to changes of the protection settings

* added missing implementation for `DeleteRangeCF` in RocksDB WAL tailing handler


v3.4.0-rc.2 (2018-09-30)
------------------------



v3.4.0-rc.2 (XXXX-XX-XX)
------------------------

* upgraded arangosync version to 0.6.0

* upgraded arangodb starter version to 0.13.3

* fixed issue #6611: Properly display JSON properties of user defined foxx services
  configuration within the web UI

* improved shards display in web UI: included arrows to better visualize that
  collection name sections can be expanded and collapsed

* added nesting support for `aql` template strings

* added support for `undefined` and AQL literals to `aql.literal`
