@@ -20,6 +20,14 @@ devel
 v3.4.0-rc.3 (XXXX-XX-XX)
 ------------------------
 
+* recover short server id from agency after a restart of a cluster node
+
+  this fixes problems with short server ids being set to 0 after a node restart,
+  which then prevented cursor result load-forwarding between multiple coordinators
+  to work properly
+
+  this should fix arangojs#573
+
 * include forward-ported diagnostic options for debugging LDAP connections
 
 * fix internal issue #3065: fix variable replacements by the AQL query
